force-app/main/default/objects/Governor__c/Governor__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Governor</label>
</CustomObject>