force-app/main/default/objects/Governor__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>