force-app/main/default/objects/Governor__c/fields/Governor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Governor_Full_Name__c</fullName>
    <label>Governor Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>